# ChinaDNS

./: .gitignore  .jenkins.sh  .travis.yml  CHANGES  CMakeLists.txt  LICENSE  Makefile  Makefile.am  README.md  autogen.sh  chinadns.conf  chnroute.txt  config.h.in  configure.ac  iplist.txt
modules/: FindUCI.cmake
openwrt/: Makefile
openwrt/files/: chinadns.init
packaging/: build_all.sh  release.sh
snap/: snapcraft.yaml
src/: Makefile.am  chinadns.c  config.h.in  local_ns_parser.c  local_ns_parser.h  nameser.h  ns_name.c  ns_netint.c  ns_parse.c  parse_uci.c  res_comp.c  resolv.h
tests/: facebook.com  google.com  iplist.py  taobao.com  test.py  www.facebook.com  x_8888
